--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     package="com.sourav.ledgerproject">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -11,7 +13,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.LedgerProject">
-        <activity android:name=".profile.addledger.ListOfAllClients"></activity>
+        <activity android:name=".profile.addledger.ListOfAllClients" />
         <activity android:name=".profile.addledger.ShowLedgerActivity" />
         <activity android:name=".profile.debit.DebitListActivity" />
 
