--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,7 +39,6 @@ dependencies {
 
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'androidx.cardview:cardview:1.0.0'
-    implementation 'com.google.android.material:material:1.2.1'
     implementation 'androidx.drawerlayout:drawerlayout:1.1.1'
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     implementation 'com.google.firebase:firebase-auth:20.0.1'
@@ -48,7 +47,12 @@ dependencies {
     implementation 'androidx.navigation:navigation-ui:2.3.2'
     implementation 'com.google.firebase:firebase-messaging:21.0.1'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'android.arch.lifecycle:extensions:1.1.1'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
+    def dagger = "2.23.2"
+    //dagger
+    implementation "com.google.dagger:dagger:$dagger"
+    annotationProcessor "com.google.dagger:dagger-compiler:$dagger"
 
     //pdf viewer
     implementation 'com.github.barteksc:android-pdf-viewer:2.8.2'
