--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,7 @@ android {
 dependencies {
     implementation platform('com.google.firebase:firebase-bom:26.2.0')
     implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'androidx.core:core:1.5.0-alpha04'
     implementation 'com.google.android.material:material:1.2.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'com.google.firebase:firebase-database:19.6.0'
@@ -50,7 +51,6 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'android.arch.lifecycle:extensions:1.1.1'
     implementation 'com.google.firebase:firebase-storage:19.2.1'
-    implementation 'androidx.wear:wear:1.1.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
     compileOnly 'com.google.android.wearable:wearable:2.8.1'
     def dagger = "2.23.2"
