--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,10 +49,30 @@ dependencies {
     implementation 'androidx.navigation:navigation-ui:2.3.2'
     implementation 'com.google.firebase:firebase-messaging:21.0.1'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'android.arch.lifecycle:extensions:1.1.1'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
     implementation 'com.google.firebase:firebase-storage:19.2.1'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
     compileOnly 'com.google.android.wearable:wearable:2.8.1'
+
+    //navigation
+    def nav_version = "2.3.5"
+
+    // Java language implementation
+    implementation "androidx.navigation:navigation-fragment:$nav_version"
+    implementation "androidx.navigation:navigation-ui:$nav_version"
+
+    implementation "androidx.navigation:navigation-dynamic-features-fragment:$nav_version"
+
+
+    apply plugin: "androidx.navigation.safeargs"
+
+    // Testing Navigation
+    androidTestImplementation "androidx.navigation:navigation-testing:$nav_version"
+
+    // Jetpack Compose Integration
+    implementation "androidx.navigation:navigation-compose:1.0.0-alpha10"
+
+
     def dagger = "2.23.2"
     //dagger
     implementation "com.google.dagger:dagger:$dagger"
